[package]
name = "elcron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
reqwest = "0.11.23"
futures = "0.3"
chrono = "0.4.38"
xml = "0.8.20"
rusqlite = { version = "0.32.1", features = ["bundled"] }
